--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-*~
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -106,3 +104,5 @@ ENV/
 # netCDF Files
 *.nc
 conda-requirements.txt
+
+self_test.py
